@@ -1,4 +1,10 @@
 
+Version Next
+
+    - Added VaadinApplicationScope
+    - Added VaadinApplicationListener
+    - Added PropertyDef
+
 Version 1.0.134 Released Sep 18, 2011
 
     - Update for latest Vaadin version
